--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" sizes="32x32" href="favicon.ico">
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9zuatAfDQ7g1yuTV5I9IwAjZX_VqpY7k=&v=weekly&libraries=marker" defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key==&v=weekly&libraries=marker" defer></script>
   <script src="https://kit.fontawesome.com/c15a751039.js" crossorigin="anonymous"></script>
   <link rel="icon" type="image/png" href="../public/assets/favicon.png">
 
@@ -19,3 +19,4 @@
   <app-root></app-root>
 </body>
 </html>
+
